# francofusco.github.io

./: Gemfile  README.md  _config.yml  about.markdown  index.html  index.markdown
_drafts/: 1993-08-24-blender-animations.md  1993-08-25-cmake-doxygen.md  1993-08-26-cmake-template.md  1993-08-27-raspberry-ssh-filesystem.md  1993-08-28-tripicturize.md  2021-01-20-creating-the-website.md  2021-01-20-ros-version-select.md  2021-01-20-welcome-to-jekyll.markdown  2021-01-23-piksel.md  2021-05-04-keybord-spammer.md  2021-05-05-creating-booklets.md  yyyy-mm-dd-blender-animations.md  yyyy-mm-dd-cmake-doxygen.md  yyyy-mm-dd-cmake-template.md  yyyy-mm-dd-raspberry-ssh-filesystem.md  yyyy-mm-dd-tripicturize.md
_includes/game_of_life/: game_of_life.html
_posts/: 2021-01-07-example-post.md  2021-01-20-creating-the-website.md  2021-01-23-piksel-alt.md  2021-01-23-piksel-alt2.md  2021-01-23-piksel-alt3.md  2021-01-23-piksel.md
_posts/_game_of_life/: game_of_life.html
_sass/minima/: custom-styles.scss  custom-variables.scss
assets/css/: main.css  style.scss
assets/js/: script.js
assets/misc/forza_quattro/: solved_forza_quattro.html  solved_forza_quattro.js  solved_forza_quattro.wasm
assets/misc/game_of_life/: game_of_life.js  game_of_life.wasm
assets/misc/piksel_example/: .gitignore  CMakeLists.txt  piksel_example.cpp
pages/: about.md
